; ModuleID = '/home/carl/AnghaBench/vlc/src/posix/extr_picture.c_picture_Allocate.c'
source_filename = "/home/carl/AnghaBench/vlc/src/posix/extr_picture.c_picture_Allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROT_READ = common dso_local global i32 0, align 4
@PROT_WRITE = common dso_local global i32 0, align 4
@MAP_SHARED = common dso_local global i32 0, align 4
@MAP_FAILED = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @picture_Allocate(i32* noalias %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  %8 = call i32 (...) @vlc_memfd()
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %37

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @ftruncate(i32 %13, i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  br label %18

18:                                               ; preds = %32, %17
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @vlc_close(i32 %19)
  store i8* null, i8** %3, align 8
  br label %37

21:                                               ; preds = %12
  %22 = load i64, i64* %5, align 8
  %23 = load i32, i32* @PROT_READ, align 4
  %24 = load i32, i32* @PROT_WRITE, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @MAP_SHARED, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i8* @mmap(i32* null, i64 %22, i32 %25, i32 %26, i32 %27, i32 0)
  store i8* %28, i8** %7, align 8
  %29 = load i8*, i8** %7, align 8
  %30 = load i8*, i8** @MAP_FAILED, align 8
  %31 = icmp eq i8* %29, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %21
  br label %18

33:                                               ; preds = %21
  %34 = load i32, i32* %6, align 4
  %35 = load i32*, i32** %4, align 8
  store i32 %34, i32* %35, align 4
  %36 = load i8*, i8** %7, align 8
  store i8* %36, i8** %3, align 8
  br label %37

37:                                               ; preds = %33, %18, %11
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i32 @vlc_memfd(...) #1

declare dso_local i64 @ftruncate(i32, i64) #1

declare dso_local i32 @vlc_close(i32) #1

declare dso_local i8* @mmap(i32*, i64, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
